# ulpb

./: .eslintrc.js  .gitignore  .prettierrc  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/shuangpin/: mod.rs  schemes.rs
src/components/: KeyButton.vue  KeyboardLayout.vue  LoadingSpinner.vue  ProgressBar.vue  StatCard.vue  ThemeSelector.vue
src/components/analytics/AdvancedTable/: AdvancedTable.vue  index.vue
src/components/analytics/AnalyticsSettings/: AnalyticsSettings.vue  index.vue
src/components/analytics/ContentOptimizationPanel/: ContentOptimizationPanel.vue  index.vue
src/components/analytics/EnvironmentOptimizationPanel/: EnvironmentOptimizationPanel.vue  index.vue
src/components/analytics/GoalCreationModal/: GoalCreationModal.vue  (+1 more)
src/core/achievements/: index.js
src/core/analytics/: index.js
src/core/learning-system/: index.js
src/core/typing-engine/: index.js
src/data/: achievements.js  lessons.js
src/router/: index.js
src/stores/: app.js  practice.js  shuangpin.js
src/styles/: design-system.css
src/test/: setup.js
src/test/components/: Button.test.js
src/utils/: achievement.js  analytics.js  helpers.js  pinyin.js  review.js  storage.js  theme.js
src/views/: Achievements.vue  Analytics.vue  Dashboard.vue  Game.vue  Help.vue  Home.vue  KeyboardLearning.vue  Learning.vue  NotFound.vue  Practice.vue  Review.vue  Settings.vue  Stats.vue
(+65 files in other folders)
